--- a/1_1_jiandang6.html
+++ b/1_1_jiandang6.html
@@ -49,15 +49,70 @@
             <div class="titlepart">
             </div>
             <div id="image_list" class=" bodypart">
-              <ul class="jiandanglist1 grid" style="display:none;">
-                <li><a href="images/jiandang6/i2.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/lianzlist_03.png"> </a></li>
-                <li><a href="images/jiandang6/i5.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/lianzlist_05.png"> </a></li>
-                <li><a href="images/jiandang6/i1.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/lianzlist_07.png"> </a></li>
+                <div class="grid" style="display:none;" >
+                    <div class="width-3-5" style=""> <!--列60%-->
+                        <div class="width-1-2"> <!--列50%-->
+                            <div class="height-1-2" style="padding: 0 4px 4px 0;">
+                                    <a href="images/jiandang6/i1.jpg" data-lightbox="lightbox">
+                                        <img src="./images/jiandang6/i1-s.jpg"> </a>
+                            </div>
+                            <div class="height-1-2" style="padding: 4px 4px 0 0;">
+                                <a href="images/jiandang6/i3.jpg" data-lightbox="lightbox">
+                                    <img src="./images/jiandang6/i3-s.jpg"> </a>
+                            </div>
+                        </div>
+                        <div class="width-1-2" > <!--列50%-->
+                            <div class="height-1-2" style="padding: 0 4px 4px 4px ;">
+                                <a href="images/jiandang6/i2.jpg" data-lightbox="lightbox">
+                                    <img src="./images/jiandang6/i2-s.jpg"> </a>
+                            </div>
+                            <div class="height-1-2" style="padding: 4px 4px 0 4px;">
+                                <a href="images/jiandang6/i4.jpg" data-lightbox="lightbox">
+                                    <img src="./images/jiandang6/i4-s.jpg"> </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="width-2-5">
+                        <div class="width-1-2" style="padding: 0 4px 0 4px;">
+                            <div class="height-1-3" style="padding: 0 0 4px 0; ">
+                                <a href="images/jiandang6/i5.jpg" data-lightbox="lightbox">
+                                    <img src="./images/jiandang6/i5-s.jpg"> </a>
+                            </div>
+                            <div class="height-1-3" style="padding: 4px 0 4px 0;">
+                                <a href="images/jiandang6/i7.jpg" data-lightbox="lightbox">
+                                    <img src="./images/jiandang6/i7-s.jpg"> </a>
+                            </div>
+                            <div class="height-1-3" style="padding: 4px 0 0 0;">
+                                <a href="images/jiandang6/i9.jpg" data-lightbox="lightbox">
+                                    <img src="./images/jiandang6/i9-s.jpg"> </a>
+                            </div>
+                        </div>
+                        <div class="width-1-2" style="padding: 0 0 0 4px;">
+                            <div class="height-1-3" style="padding: 0 0 4px 0;">
+                                <a href="images/jiandang6/i6.jpg" data-lightbox="lightbox">
+                                    <img src="./images/jiandang6/i6-s.jpg"> </a>
+                            </div>
+                            <div class="height-1-3" style="padding: 4px 0 4px 0;">
+                                <a href="images/jiandang6/i8.jpg" data-lightbox="lightbox">
+                                    <img src="./images/jiandang6/i8-s.jpg"> </a>
+                            </div>
+                            <div class="height-1-3" style="padding: 4px 0 0 0;">
+                                <a href="images/jiandang6/i10.jpg" data-lightbox="lightbox">
+                                    <img src="./images/jiandang6/i10-s.jpg"> </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+		      <!--<ul class="jiandang6list1 grid" style="display:none;">-->
+                <!--<li><a href="images/jiandang66/i2.jpg" data-lightbox="lightbox" > <img src="./images/jiandang6/lianzlist_03.png"> </a></li>-->
+                <!--<li><a href="images/jiandang66/i5.jpg" data-lightbox="lightbox" > <img src="./images/jiandang6/lianzlist_05.png"> </a></li>-->
+                <!--<li><a href="images/jiandang66/i1.jpg" data-lightbox="lightbox" > <img src="./images/jiandang6/lianzlist_07.png"> </a></li>-->
 
-                <li style="clear:both"><a href="images/jiandang6/i3.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/lianzlist_13.png"> </a></li>
-                <li><a href="images/jiandang6/i6.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/lianzlist_15.png"> </a></li>
-                <li><a href="images/jiandang6/i4.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/lianzlist_16.png"> </a></li>
-              </ul>
+                <!--<li style="clear:both"><a href="images/jiandang66/i3.jpg" data-lightbox="lightbox" > <img src="./images/jiandang6/lianzlist_13.png"> </a></li>-->
+                <!--<li><a href="images/jiandang66/i6.jpg" data-lightbox="lightbox" > <img src="./images/jiandang6/lianzlist_15.png"> </a></li>-->
+                <!--<li><a href="images/jiandang66/i4.jpg" data-lightbox="lightbox" > <img src="./images/jiandang6/lianzlist_16.png"> </a></li>-->
+              <!--</ul>-->
+
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">	<img src="images/jiandang6/i1.jpg">	</div>
@@ -66,6 +121,10 @@
                   <div class="swiper-slide">	<img src="images/jiandang6/i4.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang6/i5.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang6/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang6/i7.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang6/i8.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang6/i9.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang6/i10.jpg"></div>
                   <div class="swiper-slide">	<img src="images/jiandang6/i1.jpg">	</div>
                 </div>
               </div>
@@ -90,7 +149,7 @@
 
       <div class="col-md-9 rightpart" >
         <div class="pull-right">
-          <a class="back-btn ctl_btn" href="1_1_jiandang1.html?noaudio=1"> 返回 </a>
+          <a class="back-btn ctl_btn" href="1_1_jiandang61.html?noaudio=1"> 返回 </a>
           <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
           <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
           <audio id="audio-js"  class="audio-js">
