--- a/1_1_zhigong4.html
+++ b/1_1_zhigong4.html
@@ -50,30 +50,31 @@
 
                         <ul class="jiandanglist grid" style="display:none;">
                             <li><a href="images/zhigong4/i1.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong/minzlist_03.png"></a>
-                            </li>
+                                    src="./images/zhigong4/i1s.jpg"></a> </li>
                             <li><a href="images/zhigong4/i2.jpg" data-lightbox="lightbox"><img
-                                    src="./images/zhigong/minzlist_05.png"></a></li>
-                            <li><a href="images/zhigong4/i5.jpg" data-lightbox="lightbox"><img
-                                    src="./images/zhigong/minzlist_07.png"></a></li>
-                            <li><a href="images/zhigong4/i6.jpg" data-lightbox="lightbox"><img
-                                    src="./images/zhigong/minzlist_09.png"></a></li>
-
+                                    src="./images/zhigong4/i2s.jpg"></a></li>
                             <li><a href="images/zhigong4/i3.jpg" data-lightbox="lightbox"><img
-                                    src="./images/zhigong/minzlist_17.png"></a></li>
+                                    src="./images/zhigong4/i3s.jpg"></a></li>
                             <li><a href="images/zhigong4/i4.jpg" data-lightbox="lightbox"><img
-                                    src="./images/zhigong/minzlist_15.png"></a></li>
-                            <li><a href="images/zhigong4/i7.jpg" data-lightbox="lightbox"><img
-                                    src="./images/zhigong/minzlist_16.png"></a></li>
-                            <li><a href="images/zhigong4/i8.jpg" data-lightbox="lightbox"><img
-                                    src="./images/zhigong/minzlist_18.png"></a></li>
+                                    src="./images/zhigong4/i4s.jpg"></a></li>
+                            <li><a href="images/zhigong4/i5.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong4/i5s.jpg"></a></li>
 
-                            <li style="clear:both"><a href="images/zhigong4/i10.jpg" data-lightbox="lightbox"><img
-                                    src="./images/zhigong/minzlist_23.png"></a></li>
-                            <li><a href="images/zhigong4/i9.jpg" data-lightbox="lightbox"><img
-                                    src="./images/zhigong/minzlist_25.png"></a></li>
-                            <li>
-                              <a href="images/zhigong4/i12.jpg" data-lightbox="lightbox"><img
+                            <li><a href="images/zhigong4/i6.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong4/i6s.jpg"></a></li>
+                            <li><a href="images/zhigong4/i7.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong4/i7s.jpg"></a></li>
+
+                            <li><a href="images/zhigong4/i8.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong4/i8s.jpg"></a></li>
+
+                            <li style="clear:both"><a href="images/zhigong4/i9.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong4/i9s.jpg"></a></li>
+                            <li><a href="images/zhigong4/i10.jpg" data-lightbox="lightbox"><img
+                                    src="./images/zhigong4/i10s.jpg"></a></li>
+                            <li> <a href="images/zhigong4/i11.jpg" data-lightbox="lightbox"><img
+                                      src="./images/zhigong4/i11s.jpg" class="img-fullh"></a></li>
+                            <li> <a href="images/zhigong4/i12.jpg" data-lightbox="lightbox"><img
                                       src="./images/zhigong4/i12s.jpg" class="img-fullh"></a></li>
                             </li>
 
