--- a/1_1_zhigong2.html
+++ b/1_1_zhigong2.html
@@ -50,20 +50,18 @@
                     </div>
                     <div id="image_list" class=" bodypart">
                         <ul class="jiandanglist1 grid" style="display:none;">
-                            <!--<li><a href="images/zhigong2/i1.jpg" data-lightbox="lightbox"> <img-->
-                                    <!--src="./images/zhigong/banglist_03.png"> </a></li>-->
+                            <li><a href="images/zhigong2/i1.jpg" data-lightbox="lightbox"> <img
+                                    src="./images/zhigong2/i1s.jpg"> </a></li>
                             <li><a href="images/zhigong2/i2.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong/banglist_05.png"> </a></li>
+                                    src="./images/zhigong2/i2s.jpg"> </a></li>
+                            <li ><a href="images/zhigong2/i3.jpg" data-lightbox="lightbox"> <img
+                                    src="./images/zhigong2/i3s.jpg"> </a></li>
+                            <li style="clear:both"><a href="images/zhigong2/i4.jpg" data-lightbox="lightbox"> <img
+                                    src="./images/zhigong2/i4s.jpg"> </a></li>
                             <li><a href="images/zhigong2/i5.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong/banglist_08.png"> </a></li>
-                            <li ><a href="images/zhigong2/i6.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong/banglist_14.png"> </a></li>
-                            <li style="clear:both"><a href="images/zhigong2/i3.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong/banglist_17.png"> </a></li>
-                            <li><a href="images/zhigong2/i4.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong/banglist_19.png"> </a></li>
-                            <li><a href="images/zhigong2/i7.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong/banglist_20.jpg"> </a></li>
+                                    src="./images/zhigong2/i5s.jpg"> </a></li>
+                            <li><a href="images/zhigong2/i6.jpg" data-lightbox="lightbox"> <img
+                                    src="./images/zhigong2/i6s.jpg"> </a></li>
 
                         </ul>
                         <div class="swiper swiper-container">
