调整典型示范图片布局

--- a/1_1_jiandang8.html
+++ b/1_1_jiandang8.html
@@ -13,7 +13,7 @@
     <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
     <script>
-        g_autoplay = 4000;
+        g_autoplay = 3500;
     </script>
 </head>
 <body>
@@ -107,32 +107,17 @@
                                 <div class="swiper-slide"><img src="images/jiangdang8/i7.jpg"></div>
                                 <div class="swiper-slide"><img src="images/jiangdang8/i8.jpg"></div>
                                 <div class="swiper-slide"><img src="images/jiangdang8/i9.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i10.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i11.jpg"></div>
                                 <div class="swiper-slide"><img src="images/jiangdang8/i12.jpg"></div>
-                                <div class="swiper-slide"><img src="images/jiangdang8/典型示范大图-11.jpg"></div>
+                                <div class="swiper-slide"><img src="images/jiangdang8/i13.jpg"></div>
                                 <div class="swiper-slide"><img src="images/jiangdang8/i6.jpg"></div>
                                 <!--<div class="swiper-slide"><img src="images/jiangdang8/i1.jpg"></div>-->
                             </div>
                         </div>
-
-                        <ul class="jiandanglist2">
-                            <li><img src="./images/jiandang/cylist_08.png"></li>
-                            <li><img src="./images/jiandang/cylist_03.png"></li>
-                            <li style="clear:both"><img src="./images/jiandang/cylist_15.png"></li>
-                            <li><img src="./images/jiandang/cylist_16.png"></li>
-
-                        </ul>
-                        <ul class="jiandanglist4">
-                            <li><img src="./images/jiandang/cylist_05.png"></li>
-                            <li><img src="./images/jiandang/cylist_11.png"></li>
-                            <li><img src="./images/jiandang/cylist_18.png"></li>
-                            <li><img src="./images/jiandang/cylist_21.png"></li>
-                        </ul>
                     </div>
-
                 </div>
-
             </div>
-
         </div>
     </div>
 </div>
