--- a/1_1_zhigong3.html
+++ b/1_1_zhigong3.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>铁越集团</title>
+  <title>工会组织架构-铁越集团</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -32,7 +32,7 @@
           <div class="col-md-12 leftpart">
             <div class="titlepart" style="width:25%">
               <h3>工会组织架构</h3>
-              
+
             </div>
             <div style="width:100%;text-align:center">
               <img src="./images/zhigong/jialist_03.png" style="width:80%;margin-top:40px;">
