调整铁越风采视频列表文件

--- a/culture_5.html
+++ b/culture_5.html
@@ -30,12 +30,12 @@
 		<div class="main">
 			<div class="main-content video-list">
 				<div class="video-thumb">
-  					<div class="image" > <a href="javascript:void(0)" class="play-btn">    <img src="images/play.jpg"></a>
+  					<div class="image" > <a href="javascript:void(0)" class="play-btn">    <img src="videos/fengcai/感动铁越.jpg"></a>
     					<video class="video-js  vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-    					  <source src="videos/大连城市物流共同配送中心.webm" type="video/webm"/>
+    					  <source src="videos/fengcai/01感动铁越.webm" type="video/webm"/>
     					</video>
   					</div>
-  					<div class="title"> this is title		</div>
+  					<div class="title">感动铁越</div>
 				</div>
 			</div>
 		</div>
