调整民主监督图片布局，修正廉正建设返回链接

--- a/1_1_zhigong2.html
+++ b/1_1_zhigong2.html
@@ -49,19 +49,19 @@
                     <div class="titlepart">
                     </div>
                     <div id="image_list" class=" bodypart">
-                        <ul class="jiandanglist1 grid" style="display:none;">
+                        <ul class="zhigonglist2 grid" style="display:none;">
                             <li><a href="images/zhigong2/i1.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong2/i1s.jpg"> </a></li>
+                                    src="./images/zhigong2/i1s.jpg" class="img-fullh"> </a></li>
                             <li><a href="images/zhigong2/i2.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong2/i2s.jpg"> </a></li>
+                                    src="./images/zhigong2/i2s.jpg" class="img-fullh"> </a></li>
                             <li ><a href="images/zhigong2/i3.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong2/i3s.jpg"> </a></li>
-                            <li style="clear:both"><a href="images/zhigong2/i4.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong2/i4s.jpg"> </a></li>
-                            <li><a href="images/zhigong2/i5.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong2/i5s.jpg"> </a></li>
-                            <li><a href="images/zhigong2/i6.jpg" data-lightbox="lightbox"> <img
-                                    src="./images/zhigong2/i6s.jpg"> </a></li>
+                                    src="./images/zhigong2/i3s.jpg" class="img-fullh"> </a></li>
+                            <li class="line2"><a href="images/zhigong2/i4.jpg" data-lightbox="lightbox"> <img
+                                    src="./images/zhigong2/i4s.jpg" class="img-fullh"> </a></li>
+                            <li class="line2"><a href="images/zhigong2/i5.jpg" data-lightbox="lightbox"> <img
+                                    src="./images/zhigong2/i5s.jpg" class="img-fullh"> </a></li>
+                            <li class="line2"><a href="images/zhigong2/i6.jpg" data-lightbox="lightbox"> <img
+                                    src="./images/zhigong2/i6s.jpg" class="img-fullh"> </a></li>
 
                         </ul>
                         <div class="swiper swiper-container">
