删除多余文字

--- a/tdc_7.html
+++ b/tdc_7.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
-                <span class="text">位于甘井子区革镇堡街道的木材市场，占地面积18万m²。铁路专用线2条，32T门式电动起重机1台，夹钳装载机2台。主要为木材客户提供接卸、仓储、加工、配送等服务，年木材接卸、仓储、加工量20余万吨。
+                <span class="text">位于甘井子区革镇堡街道，占地面积18万m²。铁路专用线2条，32T门式电动起重机1台，夹钳装载机2台。主要为木材客户提供接卸、仓储、加工、配送等服务，年木材接卸、仓储、加工量20余万吨。
                 </span>
                         </p>
                     </div>
