--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="col-md-3"></div>
         </div>
 
-        <div class="row" id="fenlei">
+        <div class="row" id="fenlei" style="top: 350px;">
           <div class="col-md-3">
               <a href="1_profile.html" class="sb profile_btn "> </a>
           </div>
