--- a/tss_6.html
+++ b/tss_6.html
@@ -174,7 +174,7 @@
     </nav>
     <video class="video-js vjs-hidden"
            data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-        <source src="videos/大连夏家河子疗养院.webm" type="video/webm"/>
+        <source src="videos/大连疗养院宣传片.webm" type="video/webm"/>
     </video>
 
 </div>
