--- a/tdc_4.html
+++ b/tdc_4.html
@@ -32,7 +32,7 @@
                 <div class="col-md-3 leftpart">
                     <div class="titlepart">
                         <h3>金桥物流基地</h3>
-                        
+
                     </div>
                     <div class=" bodypart">
                         <p class="desc typing-ani">
@@ -76,7 +76,7 @@
                                             style=""></a>
                                 </div>
                             </div>
-                            <div class="col-3-4-bottom">
+                            <div class="col-3-4-bottom" style="padding: 16px 0 0 0;">
                                 <div class="width-3-5  i-col" style=""> <!--左边60%-->
                                     <a href="images/tdc4/i1.jpg" data-lightbox="lightbox"><img
                                             src="./images/tdc4/i1.jpg" class="img-fullh"
