--- a/tss_5.html
+++ b/tss_5.html
@@ -32,7 +32,7 @@
           <div class="col-md-3 leftpart">
             <div class="titlepart">
               <h3>铁道宾馆</h3>
-              
+
             </div>
             <div class=" bodypart">
               <p class="desc typing-ani">
@@ -50,40 +50,40 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none; height:100%;">
-                <div class="col-8max-left" style="">
+                <div class="width-3-5" style="padding: 0 8px 0 0;">
                     <a href="images/tss5/i1.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i1_s.jpg" class="" style=""></a>
                 </div>
 
-                <div class="col-8max-right" style="">
+                <div class="width-2-5" style="padding: 0 0 0 8px;">
 
                   <div class="height-1-4" style="">
                       <a href="images/tss5/i7.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i7.jpg" class="" style=""></a>
                   </div>
 
-                  <div class="height-1-4" style="padding: 10px 0 0 0;">
+                  <div class="height-1-4" style="padding: 16px 0 0 0;">
                     <div class="row-1-2-left">
-                      <a href="images/tss5/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i3.jpg" class="img-fullh" style=" padding:0 5px 0 0;"></a>
+                      <a href="images/tss5/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i3.jpg" class="img-fullh" style=" "></a>
                     </div>
-                    <div class="row-1-2-left">
-                      <a href="images/tss5/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i9.jpg" class="img-fullh" style=" padding:0 0 0 5px;"></a>
-                    </div>
-                  </div>
-
-                  <div class="height-1-4" style="padding: 10px 0 0 0;">
-                    <div class="row-1-2-left">
-                      <a href="images/tss5/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i2.jpg" class="img-fullh" style=" padding:0 5px 0 0;"></a>
-                    </div>
-                    <div class="row-1-2-left">
-                      <a href="images/tss5/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i6.jpg" class="img-fullh" style=" padding:0 0 0 5px;"></a>
+                    <div class="row-1-2-right">
+                      <a href="images/tss5/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i9.jpg" class="img-fullh" style=" "></a>
                     </div>
                   </div>
 
-                  <div class="height-1-4" style="padding: 10px 0 0 0;">
+                  <div class="height-1-4" style="padding: 16px 0 0 0;">
                     <div class="row-1-2-left">
-                      <a href="images/tss5/i8.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i8.jpg" class="img-fullh" style=" padding:0 5px 0 0;"></a>
+                      <a href="images/tss5/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i2.jpg" class="img-fullh" style=""></a>
                     </div>
+                    <div class="row-1-2-right">
+                      <a href="images/tss5/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i6.jpg" class="img-fullh" style=""></a>
+                    </div>
+                  </div>
+
+                  <div class="height-1-4" style="padding: 16px 0 0 0;">
                     <div class="row-1-2-left">
-                      <a href="images/tss5/i7.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i7.jpg" class="img-fullh" style=" padding:0 0 0 5px;"></a>
+                      <a href="images/tss5/i8.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i8.jpg" class="img-fullh" style=" "></a>
+                    </div>
+                    <div class="row-1-2-right">
+                      <a href="images/tss5/i7.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i7.jpg" class="img-fullh" style=""></a>
                     </div>
                   </div>
 
