修正企业精神文字

--- a/culture_3.html
+++ b/culture_3.html
@@ -129,7 +129,7 @@
                 <h4 class="modal-title">企业精神</h4>
                 <div class="modal-body">
                     <h5>诚信、规范、创新、超越 </h5>
-                    <p>企业愿景既企业的发展目标和发展定位。一流代表着企业的发展目标，现代代表着企业的发展定位。集团公司的未来就是要依托行业优势、立足区域经济特点，创建铁路一流现代物流企业。</p>
+                    <p>企业精神既企业的信念、品质和追求，是一个企业员工的精神凝聚、文化沉淀、追求目标，是对企业内在精神实质和外部形象的刻画。诚信是企业发展的立足之本，要做到诚信经营、互惠双赢、共同发展；规范是企业发展的管理基础，要做到规范经营、规范管理、规范运作；创新是企业发展的动力源泉，要做到创新工作、更新观念、开拓市场；超越是企业发展的追求目标，要做到超越对手、超越自我、战胜困难、迎接挑战。</p>
 
                 </div>
                 <div class="modal-footer">
